--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
 <!doctype HTML>
-<html lang="en"><head><title> head </title></head><body></body></html>
+<html lang="en"></html>
+<html><head><title> head </title></head><body></body></html>
