Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -1,3 +1,2 @@
 <!doctype HTML>
-<html lang="en"></html>
-<html><head><title> head </title></head><body></body></html>
+<html lang="en" ><head><title> head </title></head><body></body></html>
