--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 <!doctype HTML>
-<html lang="en"><head><title><link> head </title></head><body></body></html>
+<html lang="en"><head><title><link> head </title></head></link><body></body></html>
