--- a/index.html
+++ b/index.html
@@ -1,2 +1,11 @@
 <!doctype HTML>
-<html lang="en"><head><title><link> head </title></head></link><body></body></html>
+<html lang="en">
+  <head>
+  <link>
+  <title>head 
+  </title>
+  </link>
+  </head>
+  <body>
+  </body>
+  </html>
