Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!doctype HTML>
 <html lang="en">
   <head>
-  <link>
+  <link rel="stylesheet">
   <title>head 
   </title>
-  </link>
   </head>
   <body>
   </body>
