--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype HTML>
 <html lang="en">
   <head>
-  <link rel="stylesheet" >
+  <link rel="stylesheet" type="text/css" href="style.css">
   <title>head 
   </title>
   </head>
